--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="Btn_start" type="id"></item>
 	<item name="Btn_stop" type="id"></item>
+	<item name="Btn_test" type="id"></item>
 </resources>
